[package]
name = "lib_lime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-file = "1.1.1"
radiotap = "1.3.0"

tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.8"
