[package]
name = "lime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pcap = "0.10.1"
pcap-file = "1.1.1"
pcap-parser = "0.14.0"
radiotap = "1.3.0"

lib_lime = { path = "../lib_lime" }

tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"